@@ -1,3 +1,9 @@
+2007-06-30  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
+	* gaupol/gtk/dialogs/split.py:
+	(_shift_destination): Fix shift amount sign.
+	(_split_project): Set subtitles to project, not page.
+
 2007-06-29  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
 	* gaupol/gtk/dialogs/transform.py:
